--- a/.github/workflows/generate-website.yml
+++ b/.github/workflows/generate-website.yml
@@ -1,8 +1,11 @@
 name: github pages
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
     branches:
-      - master
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
