--- a/.github/workflows/run_commit.yml
+++ b/.github/workflows/run_commit.yml
@@ -17,6 +17,8 @@ jobs:
           ref: 'main'
       - name: copy stuff
         run: |
+          ls
+          ls ./submitted/put_your_files_here
           mv ./submitted/put_your_files_here/* ./put_your_files_here/
           rm -r ./submitted
       - name: setup
