--- a/.github/workflows/run_commit.yml
+++ b/.github/workflows/run_commit.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           repository: 'simonrenger/challenges-test'
           ref: 'main'
+          clean: false
       - name: copy stuff
         run: |
           ls
