--- a/.github/workflows/run_commit.yml
+++ b/.github/workflows/run_commit.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           message: Add results of ${{github.event.pull_request.user.login}}
           committer_name: GitHub Actions
+          push: true
       - name: Close Pull
         uses: peter-evans/close-pull@v2
         with:
